    * Removed the following deprecated attribute:
      * pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2, load_fmu, pyfmi.fmi.FMUModelME1Extended: 'version': use 'get_version' function instead
    * Note that pyfmi.load_fmu creates instances of pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2

--- PyFMI-2.9.9 ---
    * Added shortcut such that get_(real|integer|boolean|string)([]) calls no longer trigger a call to the FMU.

--- PyFMI-2.9.8 ---
    * Resolved a bug in the example fmi20_bouncing_ball_native where a step-event is triggered in every timestep.
    * Changed some imports to remove DeprecationWarnings.

--- PyFMI-2.9.7 ---
    * Added an argument to ResultDymolaBinary to allow for reading updated
      data from the loaded file.
    * Added option "synchronize_simulation" to allow for synchronizing 
      simulation with (scaled) real-time.

--- PyFMI-2.9.6 ---
    * Added setup.cfg that lists all Python package dependencies in order to run PyFMI.
    * Resolved an issue that would occur when reading large result files or streams causing the data to be corrupt due to an integer overflow.

--- PyFMI-2.9.5 ---
    * Updated structure of diagnostics data and renamed several of the variables. The top level prefix has also been changed from Diagnostics to @Diagnostics, hence the error check for name clashes has been removed.

--- PyFMI-2.9.4 ---
    * Resolved some tests in need of an update not properly designed for linux.

--- PyFMI-2.9.3 ---
    * Added an internal class variable in ResultHandlerFile to keep track of file position where the data header ends.

--- PyFMI-2.9.2 ---
    * Made error check with 'dynamic_diagnostics' less restrictive to also allow custom result handlers. In 2.9.1 only a binary result handler was allowed.

--- PyFMI-2.9.1 ---
    * Added new simulation option 'dynamic_diagnostics' to better illustrate the purpose of enabling 'logging' when 'result_handling' is set to True.