@@ -15,6 +15,8 @@
       * pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2, load_fmu, pyfmi.fmi.FMUModelME1Extended: 'version': use 'get_version' function instead
     * Note that pyfmi.load_fmu creates instances of pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2
 
+    * Changed Jacobian to use nominals retrieved via fmu.nominals_continuous_states instead of fmu.get_variable_nominal(<valueref>).
+
 --- PyFMI-2.9.9 ---
     * Added shortcut such that get_(real|integer|boolean|string)([]) calls no longer trigger a call to the FMU.
 
